# software-architecture-labs

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  nginx.conf  nginx_logging.conf  nginx_messages.conf
facade-service/: Cargo.toml  Dockerfile  build.rs
facade-service/proto/: logging-service.proto
facade-service/src/: lib.rs  main.rs
hazelcast_lab_task_3/: pom.xml
hazelcast_lab_task_3/src/main/java/ua/edu/ucu/software_architecture/labs/lab_2/: HazelcastApp.java
hazelcast_lab_task_4/: pom.xml
hazelcast_lab_task_4/src/main/java/ua/edu/ucu/software_architecture/labs/lab_2/: LeakingHazelcastApp.java  OptimisticHazelcastApp.java  PessimisticHazelcastApp.java
hazelcast_lab_task_5/: pom.xml
hazelcast_lab_task_5/src/main/java/ua/edu/ucu/software_architecture/labs/lab_2/: ConsumerApp.java  ProducerApp.java
logging-service/: Cargo.toml  Dockerfile  build.rs  pom.xml
logging-service/proto/: logging-service.proto
logging-service/src/: main.rs
logging-service/src/main/java/ua/edu/ucu/software_architecture/labs/lab_3/: HazelcastMessageLogger.java  LoggingService.java
messages-service/: Cargo.toml  Dockerfile  build.rs
messages-service/proto/: messages-service.proto
messages-service/src/: main.rs
