[package]
name = "facade-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
exitcode = "1.1.2"
log = "0.4.17"
prost = "0.11.6"
thiserror = "1.0.38"
tonic = "0.8.3"
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics"] }
rdkafka = "0.31.0"
futures = "0.3.28"

[build-dependencies]
tonic-build = "0.8.3"
