[package]
name = "logging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.6"
exitcode = "1.1.2"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
uuid = { version = "1.3.0", features = ["macro-diagnostics"] }
log = "0.4.17"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.8.4"
